# three-thoughts

./: CHANGELOG.md  Cargo.toml  License  example.ts3  output.md  output.txt  readme.md
examples/: add_sub_other.ts3  bubble_sort.ts3  condition.ts3  copy.ts3  demo.ts3  fibonacci.ts3  hello_world.ts3  if_zero.ts3  loop.ts3  overview.ts3  panic.ts3  read.ts3  reverse.ts3  ts3.ts3  while.ts3
src/: main.rs
src/.github/workflows/: ci.yml
src/core/: error.rs  execute.rs  instruction.rs  loop_and_condition.rs  memory.rs  mod.rs  parser.rs
