[package]
name = "ts3"
version = "0.1.0"
edition = "2024"
description = "用哲学三问来进行编写代码"
license = "MIT"
repository = "https://github.com/klp-xkjt/three-thoughts"
readme = "readme.md"
authors = ["klp-xkjt <xkjt-tnt@outlook.com>"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"

[[bin]]
name = "ts3"
path = "src/main.rs"
